# EL7009-RoboticaMovil

./: .gitignore  README.md
dockerfile/: Dockerfile  start_vnc.sh
tarea_1/el7009_diff_drive_robot/scripts/: example_controller.py  plot.py
tarea_1/entrega/: README.txt.txt  new_controller.py  odom_node.py  odom_plotter.py
tarea_2/new_controller/: CMakeLists.txt  package.xml
tarea_2/new_controller/scripts/: GT_node.py  controller.py  move.py
tarea_2/simple_manipulator/: CMakeLists.txt  package.xml
tarea_2/simple_manipulator/launch/: simple_manipulator.launch.py  simple_manipulator.rviz
tarea_2/simple_manipulator/scripts/: fk_solution.py  forward_kinematics.py  inverse_kinematics.py
tarea_2/simple_manipulator/urdf/: simple_manipulator.xacro
tarea_3/amcl_launch/config/: amcl.yaml
tarea_3/ekf_localization/: CMakeLists.txt  package.xml
tarea_3/ekf_localization/scripts/: ekf_localization.py  ekf_slam copy.py  ekf_slam.py  plot_ekfpose_vs_gt.py
tarea_3/el7009_diff_drive_robot/launch/: robot.launch.py
tarea_3/el7009_diff_drive_robot/scripts/: plot_amcl_vs_gt.py
tarea_4/Ejemplos/: exps.py  pure_pursuit_planner.py  rrt_planner.py
